# antarc

./: .gitignore  Cargo.toml  README.md  entity_diagram.md  scratch  sequence_diagram.md  state_diagram.md
.github/workflows/: rust.yml
antarc/: Cargo.toml  notes.md
antarc-dummy/: Cargo.toml
antarc-dummy-sample/: Cargo.toml
antarc-dummy-sample/src/: main.rs
antarc-dummy/src/: lib.rs
antarc-macro/: Cargo.toml
antarc-macro/src/: lib.rs
antarc-old/: Cargo.toml
antarc-old/benches/: ecs_ideas_benchmark.rs
antarc-old/src/: lib.rs  net.rs  receiver.rs
antarc-old/src/net/: client.rs  server.rs
antarc-protocol/: Cargo.toml
antarc-protocol-old/: Cargo.toml
antarc-protocol-old/src/: client.rs  connection.rs  controls.rs  events.rs  header.rs  hosts.rs  lib.rs  packets.rs  server.rs
antarc-protocol-old/src/controls/: data_transfer.rs
antarc-protocol-old/src/packets/: scheduled.rs  sent.rs
antarc-protocol/benches/: benchmark_array_concat.rs  benchmark_clone_vs_arc.rs  benchmark_hash_packet_vs_part.rs
antarc-protocol/src/: client.rs  connection.rs  errors.rs  events.rs  header.rs  hosts.rs  lib.rs  packet.rs  packets.rs  payload.rs  peers.rs  reliability.rs  scheduler.rs  server.rs  service_traits.rs
antarc-protocol/src/client/: service.rs
antarc-protocol/src/controls/: connection_accepted.rs  connection_denied.rs  connection_request.rs  connection_terminate.rs  data_transfer.rs  heartbeat.rs
antarc-protocol/src/hosts/: awaiting_connection_ack.rs  connected.rs  disconnected.rs
antarc-protocol/src/packet/: kind.rs  payload.rs  received.rs  scheduled.rs  sequence.rs
antarc-protocol/src/packets/: acked.rs  decode.rs  delivery.rs  encode.rs  header.rs  message.rs  packet_type.rs  partial.rs  raw.rs  received.rs  scheduled.rs
antarc-protocol/src/server/: service.rs
antarc-sample/: Cargo.toml
antarc-sample/src/: main.rs
antarc/benches/: ecs_ideas_benchmark.rs
antarc/src/: ack_window.rs  application_data.rs  client.rs  connection.rs  content_type.rs  cookie.rs  event.rs  events.rs  handshake.rs  host.rs  length.rs  lib.rs  limited_vec.rs  net.rs  packet.rs  peer.rs  protocol_version.rs  readiness.rs  receiver.rs  record.rs  sender.rs  sequence.rs  server.rs  state.rs
antarc/src/handshake/: hello.rs  hello_verify.rs
antarc/src/host/: awaiting_connection_ack.rs  connected.rs  disconnected.rs  mod.rs  requesting_connection.rs  sending_connection_request.rs
antarc/src/net/: client.rs  server.rs
antarc/src/packet/: acked.rs  header.rs  kind.rs  payload.rs  queued.rs  received.rs  sent.rs  sequence.rs  to_send.rs
client/: Cargo.toml
client/src/: main.rs
experimental/: Cargo.toml
experimental/src/: main.rs
host-state/: Cargo.toml
host-state/src/: main.rs
net/: Cargo.toml
net/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
with-callback/: Cargo.toml
with-callback/src/: main.rs
with-state/: Cargo.toml
with-state-no-event/: Cargo.toml
with-state-no-event/src/: main.rs
with-state/src/: main.rs
