[package]
name = "antarc-protocol"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antarc-macro = { path = "../antarc-macro" }
crc32fast = { version = "*", features = ["std", "nightly"] }
log = { version = "*" }
thiserror = "*"

[dev-dependencies]
criterion = "*"
rand = "*"

[[bench]]
name = "benchmark_clone_vs_arc"
harness = false