[package]
name = "antarc-protocol"
version = "0.1.0"
authors = ["meowjesty <meowjesty_nyan@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/meowjesty/antarc"
repository = "https://github.com/meowjesty/antarc"
description = "Antarc custom procotol"
keywords = ["protocol"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# antarc-macro = { path = "../antarc-macro" }
crc32fast = { version = "1.2", features = ["std", "nightly"] }
log = { version = "0.4" }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "benchmark_clone_vs_arc"
harness = false

[[bench]]
name = "benchmark_array_concat"
harness = false