[package]
name = "antarc"
version = "0.1.0"
authors = ["meowjesty <meowjesty_nyan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antarc-protocol = { path = "../antarc-protocol" }
mio = { version = "*", features = ["os-poll", "net"] }
log = { version = "*" }
thiserror = "*"