[package]
name = "experimental"
version = "0.1.0"
authors = ["meowjesty <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antarc = { path = "../antarc" }
hecs = { version = "*", features = ["std", "macros"] }